--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600&display=swap');
 
 :root {
     --font-family: 'Open Sans', sans-serif;
     --primary: #8e44ad;
-        --dark: #616264;
+    --primary-dark: #683180;
+    --dark: #616264;
     --danger: #e74c3c;
     --background-light: #ecf0f1;
     --text-color: #444;
@@ -17,14 +17,16 @@
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     font-size: 10px;
     font-family: var(--font-family);
 }
 
-h1, p {
+h1,
+p {
     margin: 0;
 }
 
@@ -37,6 +39,10 @@ ul {
     padding: 0;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
 /* button */
 .btn {
     background-color: white;
@@ -94,6 +100,29 @@ header {
     background-color: var(--primary);
     padding: 1.5rem;
     box-shadow: var(--box-shadow);
+    color: var(--text-color-light);
+        display: flex;
+        flex-flow: nowrap;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .header-menu {
+        margin: 0;
+    }
+    
+    .header-menu li {
+        border-radius: 3px;
+        padding: 5px 15px;
+        transition: background-color .3s;
+    }
+    
+    .header-menu li:hover {
+        background-color: var(--primary-dark);
+    }
+    
+    .active {
+        background-color: var(--primary-dark);
 }
 
 .logo {
