--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,14 @@ a {
     color: inherit;
     text-decoration: none;
 }
+/* utils */
+.p-20 {
+    padding: 20px;
+}
+
+.p-10 {
+    padding: 10px;
+}
 /* button */
 .btn {
     background-color: white;
@@ -133,15 +141,22 @@ header {
 
 /* content */
 .content {
+    max-width: 100rem;
+        width: 100%;
     flex: 1;
+    align-self: center;
     display: flex;
-    flex-flow: row;
-    justify-content: center;
-    align-items: center;
-    color: var(--text-color);
+    flex-flow: column;
+        padding: 2rem 0;
+        align-items: center;
 }
 
-
+.block {
+    border-radius: 3px;
+    border: var(--border);
+    background-color: white;
+    box-shadow: var(--box-shadow);
+}
 
 
 
