--- a/public/css/show-article.css
+++ b/public/css/show-article.css
@@ -32,3 +32,9 @@
 .article-back:hover {
     color: var(--primary);
 }
+.action {
+    margin-top: 2rem;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+}
