Creation des fichiers php pour l'authentification

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,12 +117,15 @@ header {
     
     .header-menu {
         margin: 0;
+        display: flex;
+            flex-flow: row;
     }
     
     .header-menu li {
         border-radius: 3px;
         padding: 5px 15px;
         transition: background-color .3s;
+        margin-left: 1rem;
     }
     
     .header-menu li:hover {
